--- a/fsi_poc.ipynb
+++ b/fsi_poc.ipynb
@@ -57,18 +57,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pulling Ollama model...\n",
-      "context_window=128000 num_output=256 is_chat_model=True is_function_calling_model=False model_name='llama3.1:8b-instruct-q8_0' system_role=<MessageRole.SYSTEM: 'system'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TODO: notify if ollama server is running with model loaded\n",
     "import subprocess, os\n",
@@ -116,19 +107,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 16.3M  100 16.3M    0     0  11.5M      0  0:00:01  0:00:01 --:--:-- 11.5M\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# SEC rules and regulations\n",
     "!cd /workspace/data && curl -X GET \"https://www.ecfr.gov/api/versioner/v1/full/2024-07-23/title-17.xml?chapter=II\" -H \"accept: application/xml\" > title-17.xml"
@@ -559,6 +540,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.embeddings.ollama import OllamaEmbedding\n",
+    "\n",
+    "ollama_embedding = OllamaEmbedding(\n",
+    "    model_name=\"llama2\",\n",
+    "    base_url=\"http://localhost:11434\",\n",
+    "    ollama_additional_kwargs={\"mirostat\": 0},\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Vector Database RAG\n",
     "from llama_index.core.postprocessor import LLMRerank\n",
@@ -873,6 +876,300 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Agentic Version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import subprocess, os\n",
+    "from llama_index.core import Settings\n",
+    "from llama_index.llms.ollama import Ollama\n",
+    "from llama_index.llms.openai import OpenAI as LOpenAI\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv('/workspace/repos/agentic-ai/.env')\n",
+    "\n",
+    "from utils import parse_list_from_output_string\n",
+    "from llama_index.core.workflow import (\n",
+    "    Context,\n",
+    "    Event,\n",
+    "    StartEvent,\n",
+    "    StopEvent,\n",
+    "    Workflow,\n",
+    "    step,\n",
+    ")\n",
+    "\n",
+    "from llama_index.core.agent.react import ReActAgent\n",
+    "from llama_index.core.llms import ChatMessage\n",
+    "from llama_index.core.tools import ToolSelection, ToolOutput\n",
+    "\n",
+    "from llama_index.core.chat_engine import SimpleChatEngine\n",
+    "from llama_index.utils.workflow import draw_all_possible_flows\n",
+    "from llama_index.core.response_synthesizers import TreeSummarize\n",
+    "\n",
+    "from llama_index.llms.ollama import Ollama\n",
+    "from llama_index.llms.openai import OpenAI as LOpenAI\n",
+    "from rag_utils import create_llama_vector_index_rag\n",
+    "\n",
+    "import os\n",
+    "import xml.etree.ElementTree as ET\n",
+    "from sec_utils import get_tree_data, get_metadata\n",
+    "from llamaindex_data_utils import extract_text_from_pdf\n",
+    "\n",
+    "import os, re\n",
+    "from llama_index.readers.file import PDFReader\n",
+    "from llama_index.core import Document\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv('/workspace/repos/agentic-ai/.env')\n",
+    "\n",
+    "\n",
+    "from llama_index.embeddings.ollama import OllamaEmbedding\n",
+    "\n",
+    "class SummaryStartEvent(Event):\n",
+    "    pass\n",
+    "\n",
+    "# class InitializationEvent(Event):\n",
+    "#     pass\n",
+    "\n",
+    "class InitializationCleanupEvent(Event):\n",
+    "    result: str\n",
+    "\n",
+    "class RegulationsExtractionEvent(Event):\n",
+    "    result: str\n",
+    "\n",
+    "class FormatCorrectionEvent(Event):\n",
+    "    regs: list\n",
+    "    result: str\n",
+    "\n",
+    "class SummarizationEvent(Event):\n",
+    "    result: str\n",
+    "\n",
+    "class SummarizationValidationEvent(Event):\n",
+    "    result: str\n",
+    "\n",
+    "\n",
+    "class RuleSummarizationFlow(Workflow):\n",
+    "\n",
+    "    @step\n",
+    "    async def initialize(self, ctx: Context, ev: StartEvent) -> RegulationsExtractionEvent:\n",
+    "        \n",
+    "        # Open source work horse model\n",
+    "        model_name, ctx_len = \"llama3.1:8b-instruct-q8_0\", 128000\n",
+    "        addtion_kwargs = {\"max_new_tokens\": 8000}\n",
+    "        ctx.data[\"llm\"] = Ollama(model=model_name, url=\"http://127.0.0.1:11434\", context_window=ctx_len, model_type=\"chat\", is_function_calling_model=True, \n",
+    "                                    request_timeout=4000.0, **addtion_kwargs)\n",
+    "        \n",
+    "        # Expert closed model\n",
+    "        ctx.data[\"expert_llm\"] = ctx.data[\"llm\"] # OpenAI(model=\"gpt-4o\",temperature=0.1)\n",
+    "        \n",
+    "        # embed_model = OllamaEmbedding(model_name, base_url=\"http://localhost:11434\")\n",
+    "        \n",
+    "        parser = PDFReader(return_full_document=True)\n",
+    "        documents_proposal = parser.load_data(\"/workspace/data/compliance/FSI_Rule_proposal.pdf\")\n",
+    "\n",
+    "        # remove page numbers. they mess up later parsing.\n",
+    "        page_number = 1\n",
+    "        while True:\n",
+    "            # Create a regex pattern for the current page number\n",
+    "            pattern = rf'^{page_number}+ '\n",
+    "            # Substitute the pattern with an empty string\n",
+    "            new_text = re.sub(pattern, '', documents_proposal[0].text, flags=re.MULTILINE)\n",
+    "            # If no substitution was made, break the loop\n",
+    "            if new_text == documents_proposal[0].text:\n",
+    "                break\n",
+    "            # Update the text and increment the page number\n",
+    "            documents_proposal[0].text = new_text\n",
+    "            page_number += 1\n",
+    "\n",
+    "        # TODO: Generalize (Very manual splitting of sections)\n",
+    "        pattern = r'(?<=\\n)([IVX]+\\..*?)(?=\\n[IVX]+\\.\\s|\\Z)'\n",
+    "        sections=[]\n",
+    "        sections.append(\"Proposal Information\"+documents_proposal[0].text.split(\"I. Background A. Sta\")[0])\n",
+    "        sections += re.findall(pattern, documents_proposal[0].text, re.DOTALL)\n",
+    "        section4_5split = sections[4].split(\"V. Paperwork Reduction Act\")\n",
+    "        sections[4]=section4_5split[0]\n",
+    "        sections.append(\"V. Paperwork Reduction Act\"+section4_5split[-1])\n",
+    "\n",
+    "        documents_proposal = [Document(text=t, \n",
+    "                                text_template='{metadata_str}\\n\\n{content}') for t in sections]\n",
+    "\n",
+    "        # add metadata to the documents_proposal\n",
+    "        for i in range(len(documents_proposal)):\n",
+    "            documents_proposal[i].metadata[\"section\"] = documents_proposal[i].text.split(\"\\n\")[0].strip()\n",
+    "            \n",
+    "        # documents_proposal.extend(docs)\n",
+    "        \n",
+    "        # we use a chat engine so it remembers previous interactions\n",
+    "        ctx.data[\"chat\"] = SimpleChatEngine.from_defaults(llm=ctx.data[\"expert_llm\"])\n",
+    "        # ctx.data[\"summarizer\"] = TreeSummarize(llm=ctx.data[\"expert_llm\"], verbose=False)\n",
+    "        ctx.data[\"new_rule_documents\"] = documents_proposal\n",
+    "\n",
+    "        ctx.data[\"initialized\"] = True\n",
+    "        return RegulationsExtractionEvent()\n",
+    "    \n",
+    "    # @step\n",
+    "    # async def check_initialization(self, ctx: Context, ev: InitializationEvent) -> InitializationCleanupEvent:\n",
+    "    #     assert ctx.data[\"initialized\"], \"Workflow not initialized.\"\n",
+    "    #     for doc in ctx.data[\"new_rule_documents\"]:\n",
+    "    #         response = await ctx.data[\"chat\"].chat(f\"\"\"\n",
+    "    #         Given text, determine if there are any formatting issues. \n",
+    "    #         If it's good, return the original text.\n",
+    "    #         If it's bad, rewrite the text so that it the text is clean.\n",
+    "    #         Bad formatting contains accidental spaces (e.g. \"Co mputer\", \"tit- for-tat\") and .\n",
+    "\n",
+    "    #         Here is the text: {doc.text}\n",
+    "    #         \"\"\")\n",
+    "        \n",
+    "    #         print(\"Query Judge response:\", response)\n",
+    "    #         if response == \"bad\":\n",
+    "    #             # try again\n",
+    "    #             return BadQueryEvent(query=ev.query)\n",
+    "    #         else:\n",
+    "    #             pass\n",
+    "\n",
+    "    #     return SummaryStartEvent()\n",
+    "\n",
+    "    @step\n",
+    "    async def extract_regulations(self, ctx: Context, ev: InitializationEvent) -> RegulationsExtractionEvent:\n",
+    "        assert ctx.data[\"initialized\"], \"Workflow not initialized.\"\n",
+    "        \n",
+    "        regs_extraction=[]\n",
+    "        for i,sec in enumerate(ctx.data[\"new_rule_documents\"]):\n",
+    "\n",
+    "            rule_prompt = f\"\"\"\n",
+    "            Extract all mentions of any regulatory sections, rules, and acts in the following text.\n",
+    "            Compile all extracted items into a single Python List of Strings object.\n",
+    "            For example, [\"Item 1\", \"Item 2\", \"Item 3\"].\n",
+    "\n",
+    "            Here is the text:\n",
+    "            {sec}\n",
+    "            \"\"\"\n",
+    "            response = llm.complete(rule_prompt)\n",
+    "\n",
+    "            # List checker\n",
+    "            rewrite_counter=0\n",
+    "            while True:\n",
+    "                try: \n",
+    "                    extracted_reg = parse_list_from_output_string(response.text)\n",
+    "                    break\n",
+    "                except:\n",
+    "                    print(\"Correcting list format...\")\n",
+    "                    response = ctx[\"chat\"](f\"\"\"The following text does not contain a valid Python List of Strings? \n",
+    "                                                Rewrite the text so that the List is in a valid Python format.\n",
+    "                                                For example, [\"Item 1\", \"Item 2\", \"Item 3\"].\\n\\n{response.text}\n",
+    "                                            \"\"\")\n",
+    "                    rewrite_counter+=1\n",
+    "                    print(f\"   Rewrote list {rewrite_counter} times.\")\n",
+    "                    if rewrite_counter>5:\n",
+    "                        raise ValueError(\"Could not correct list format.\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "for i,sec in enumerate(sections):\n",
+    "\n",
+    "    rule_prompt = f\"\"\"\n",
+    "    Extract all mentions of any regulatory sections, rules, and acts in the following text.\n",
+    "    Compile all extracted items into a single Python List of Strings object.\n",
+    "    For example, [\"Item 1\", \"Item 2\", \"Item 3\"].\n",
+    "\n",
+    "    Here is the text:\n",
+    "    {sec}\n",
+    "    \"\"\"\n",
+    "    response = llm.complete(rule_prompt)\n",
+    "\n",
+    "    # List checker\n",
+    "    rewrite_counter=0\n",
+    "    while True:\n",
+    "        try: \n",
+    "            extracted_reg = parse_list_from_output_string(response.text)\n",
+    "            break\n",
+    "        except:\n",
+    "            print(\"Correcting list format...\")\n",
+    "            response = llm.complete(f\"\"\"The following text does not contain a valid Python List of Strings? \n",
+    "                                        Rewrite the text so that the List is in a valid Python format.\n",
+    "                                        For example, [\"Item 1\", \"Item 2\", \"Item 3\"].\\n\\n{response.text}\n",
+    "                                    \"\"\")\n",
+    "            rewrite_counter+=1\n",
+    "            print(f\"   Rewrote list {rewrite_counter} times.\")\n",
+    "            if rewrite_counter>5:\n",
+    "                raise ValueError(\"Could not correct list format.\")\n",
+    "\n",
+    "    extracted_regs.append(extracted_reg)\n",
+    "    prompt_summary = f\"\"\"\n",
+    "    Summarize the content of the following section from a new SEC rule proposal or amendment. Ensure that the summary:\n",
+    "\n",
+    "    1. Includes every reference to any specific regulatory section, rule, or act mentioned in the text (e.g., 12 U.S.C. 1843(k)(4)(C), 240.13a-15, Unfunded Mandates Reform Act (section 202(a)), Investment Company Act of 1940).\n",
+    "    2. Stays strictly within the information presented in the text, without incorporating any outside or prior knowledge.\n",
+    "    3. Is detailed, thorough, and specific in its coverage of all key points.\n",
+    "    4. Avoids adding any introductory or concluding remarks outside the scope of the summary itself.\n",
+    "\n",
+    "    Here are some of the regulatory sections, rules, and acts:\n",
+    "    {extracted_reg} \n",
+    "    \"\"\"\n",
+    "    print(f\"Summarizing section {i+1}/{len(sections)}...\")\n",
+    "    parser = SentenceSplitter(chunk_size=500, chunk_overlap=20)\n",
+    "    nodes = parser.get_nodes_from_documents([documents_proposal[i]], show_progress=True)\n",
+    "    response = await summarizer.aget_response(prompt_summary, [doc.text for doc in nodes])\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "class JokeFlow(Workflow):\n",
+    "    llm = OpenAI()\n",
+    "\n",
+    "    @step\n",
+    "    async def generate_joke(self, ev: StartEvent) -> JokeEvent:\n",
+    "        topic = ev.topic\n",
+    "\n",
+    "        prompt = f\"Write your best joke about {topic}.\"\n",
+    "        response = await self.llm.acomplete(prompt)\n",
+    "        return JokeEvent(joke=str(response))\n",
+    "\n",
+    "    @step\n",
+    "    async def critique_joke(self, ev: JokeEvent) -> StopEvent:\n",
+    "        joke = ev.joke\n",
+    "\n",
+    "        prompt = f\"Give a thorough analysis and critique of the following joke: {joke}\"\n",
+    "        response = await self.llm.acomplete(prompt)\n",
+    "        return StopEvent(result=str(response))\n",
+    "\n",
+    "\n",
+    "w = JokeFlow(timeout=60, verbose=False)\n",
+    "result = await w.run(topic=\"pirates\")\n",
+    "print(str(result))\n",
+    "\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -906,6 +1203,48 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Agentic First Version"
+   ]
   },
   {
    "cell_type": "code",
@@ -2298,20 +2637,6 @@
    "source": [
     "print(response.text)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
