--- a/fsi_poc.ipynb
+++ b/fsi_poc.ipynb
@@ -869,13 +869,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -884,10 +877,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import List\n",
     "import subprocess, os\n",
     "from llama_index.core import Settings\n",
     "from llama_index.llms.ollama import Ollama\n",
@@ -895,7 +889,7 @@
     "from dotenv import load_dotenv\n",
     "load_dotenv('/workspace/repos/agentic-ai/.env')\n",
     "\n",
-    "from utils import parse_list_from_output_string\n",
+    "from utils import parse_list_from_output_string, extract_list_from_string\n",
     "from llama_index.core.workflow import (\n",
     "    Context,\n",
     "    Event,\n",
@@ -925,9 +919,13 @@
     "import os, re\n",
     "from llama_index.readers.file import PDFReader\n",
     "from llama_index.core import Document\n",
+    "from llama_index.core.node_parser import SentenceSplitter\n",
+    "\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv('/workspace/repos/agentic-ai/.env')\n",
     "\n",
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()\n",
     "\n",
     "from llama_index.embeddings.ollama import OllamaEmbedding\n",
     "\n",
@@ -941,17 +939,18 @@
     "    result: str\n",
     "\n",
     "class RegulationsExtractionEvent(Event):\n",
-    "    result: str\n",
+    "    pass\n",
     "\n",
     "class FormatCorrectionEvent(Event):\n",
-    "    regs: list\n",
-    "    result: str\n",
+    "    result: list\n",
+    "\n",
     "\n",
     "class SummarizationEvent(Event):\n",
-    "    result: str\n",
+    "    result: list\n",
     "\n",
-    "class SummarizationValidationEvent(Event):\n",
-    "    result: str\n",
+    "class SummarizationNumericalValidationEvent(Event):\n",
+    "    result: list\n",
+    "    summaries: list\n",
     "\n",
     "\n",
     "class RuleSummarizationFlow(Workflow):\n",
@@ -995,7 +994,6 @@
     "        section4_5split = sections[4].split(\"V. Paperwork Reduction Act\")\n",
     "        sections[4]=section4_5split[0]\n",
     "        sections.append(\"V. Paperwork Reduction Act\"+section4_5split[-1])\n",
-    "\n",
     "        documents_proposal = [Document(text=t, \n",
     "                                text_template='{metadata_str}\\n\\n{content}') for t in sections]\n",
     "\n",
@@ -1005,11 +1003,13 @@
     "            \n",
     "        # documents_proposal.extend(docs)\n",
     "        \n",
-    "        # we use a chat engine so it remembers previous interactions\n",
+    "        # Global state context\n",
+    "        ctx.data[\"num_sections\"] = len(sections)\n",
+    "        ctx.data[\"bad_summaries\"] = [x for x in range(len(sections))]\n",
     "        ctx.data[\"chat\"] = SimpleChatEngine.from_defaults(llm=ctx.data[\"expert_llm\"])\n",
-    "        # ctx.data[\"summarizer\"] = TreeSummarize(llm=ctx.data[\"expert_llm\"], verbose=False)\n",
+    "        ctx.data[\"summarizer\"] = TreeSummarize(llm=ctx.data[\"expert_llm\"], verbose=False)\n",
     "        ctx.data[\"new_rule_documents\"] = documents_proposal\n",
-    "\n",
+    "        \n",
     "        ctx.data[\"initialized\"] = True\n",
     "        return RegulationsExtractionEvent()\n",
     "    \n",
@@ -1036,7 +1036,7 @@
     "    #     return SummaryStartEvent()\n",
     "\n",
     "    @step\n",
-    "    async def extract_regulations(self, ctx: Context, ev: InitializationEvent) -> RegulationsExtractionEvent:\n",
+    "    async def extract_regulations(self, ctx: Context, ev: RegulationsExtractionEvent) -> FormatCorrectionEvent:\n",
     "        assert ctx.data[\"initialized\"], \"Workflow not initialized.\"\n",
     "        \n",
     "        regs_extraction=[]\n",
@@ -1046,149 +1046,161 @@
     "            Extract all mentions of any regulatory sections, rules, and acts in the following text.\n",
     "            Compile all extracted items into a single Python List of Strings object.\n",
     "            For example, [\"Item 1\", \"Item 2\", \"Item 3\"].\n",
+    "            Only return the Python List of Strings.\n",
     "\n",
     "            Here is the text:\n",
     "            {sec}\n",
     "            \"\"\"\n",
-    "            response = llm.complete(rule_prompt)\n",
-    "\n",
+    "            response = ctx.data[\"chat\"].chat(rule_prompt)\n",
+    "            regs_extraction.append(response)\n",
+    "        \n",
+    "        return FormatCorrectionEvent(result=regs_extraction)\n",
+    "    \n",
+    "    @step\n",
+    "    async def correct_format(self, ctx: Context, ev: FormatCorrectionEvent) -> SummarizationEvent:\n",
+    "        \n",
+    "        regs_list = []\n",
+    "        for response in ev.result:\n",
     "            # List checker\n",
     "            rewrite_counter=0\n",
     "            while True:\n",
     "                try: \n",
-    "                    extracted_reg = parse_list_from_output_string(response.text)\n",
+    "                    \n",
+    "                    # extracted_reg = parse_list_from_output_string(response)\n",
+    "                    extracted_reg = extract_list_from_string(response)\n",
     "                    break\n",
     "                except:\n",
     "                    print(\"Correcting list format...\")\n",
-    "                    response = ctx[\"chat\"](f\"\"\"The following text does not contain a valid Python List of Strings? \n",
+    "                    response = ctx.data[\"chat\"].chat(f\"\"\"The following text does not contain a valid Python List of Strings? \n",
     "                                                Rewrite the text so that the List is in a valid Python format.\n",
-    "                                                For example, [\"Item 1\", \"Item 2\", \"Item 3\"].\\n\\n{response.text}\n",
+    "                                                For example, [\"Item 1\", \"Item 2\", \"Item 3\"].\\nText:\\n\\n{response}\n",
     "                                            \"\"\")\n",
     "                    rewrite_counter+=1\n",
     "                    print(f\"   Rewrote list {rewrite_counter} times.\")\n",
     "                    if rewrite_counter>5:\n",
     "                        raise ValueError(\"Could not correct list format.\")\n",
+    "            regs_list.append(extracted_reg)\n",
     "\n",
+    "        return SummarizationEvent(result=regs_list)\n",
     "\n",
-    "\n",
-    "for i,sec in enumerate(sections):\n",
-    "\n",
-    "    rule_prompt = f\"\"\"\n",
-    "    Extract all mentions of any regulatory sections, rules, and acts in the following text.\n",
-    "    Compile all extracted items into a single Python List of Strings object.\n",
-    "    For example, [\"Item 1\", \"Item 2\", \"Item 3\"].\n",
-    "\n",
-    "    Here is the text:\n",
-    "    {sec}\n",
-    "    \"\"\"\n",
-    "    response = llm.complete(rule_prompt)\n",
-    "\n",
-    "    # List checker\n",
-    "    rewrite_counter=0\n",
-    "    while True:\n",
-    "        try: \n",
-    "            extracted_reg = parse_list_from_output_string(response.text)\n",
-    "            break\n",
-    "        except:\n",
-    "            print(\"Correcting list format...\")\n",
-    "            response = llm.complete(f\"\"\"The following text does not contain a valid Python List of Strings? \n",
-    "                                        Rewrite the text so that the List is in a valid Python format.\n",
-    "                                        For example, [\"Item 1\", \"Item 2\", \"Item 3\"].\\n\\n{response.text}\n",
-    "                                    \"\"\")\n",
-    "            rewrite_counter+=1\n",
-    "            print(f\"   Rewrote list {rewrite_counter} times.\")\n",
-    "            if rewrite_counter>5:\n",
-    "                raise ValueError(\"Could not correct list format.\")\n",
-    "\n",
-    "    extracted_regs.append(extracted_reg)\n",
-    "    prompt_summary = f\"\"\"\n",
-    "    Summarize the content of the following section from a new SEC rule proposal or amendment. Ensure that the summary:\n",
-    "\n",
-    "    1. Includes every reference to any specific regulatory section, rule, or act mentioned in the text (e.g., 12 U.S.C. 1843(k)(4)(C), 240.13a-15, Unfunded Mandates Reform Act (section 202(a)), Investment Company Act of 1940).\n",
-    "    2. Stays strictly within the information presented in the text, without incorporating any outside or prior knowledge.\n",
-    "    3. Is detailed, thorough, and specific in its coverage of all key points.\n",
-    "    4. Avoids adding any introductory or concluding remarks outside the scope of the summary itself.\n",
-    "\n",
-    "    Here are some of the regulatory sections, rules, and acts:\n",
-    "    {extracted_reg} \n",
-    "    \"\"\"\n",
-    "    print(f\"Summarizing section {i+1}/{len(sections)}...\")\n",
-    "    parser = SentenceSplitter(chunk_size=500, chunk_overlap=20)\n",
-    "    nodes = parser.get_nodes_from_documents([documents_proposal[i]], show_progress=True)\n",
-    "    response = await summarizer.aget_response(prompt_summary, [doc.text for doc in nodes])\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "class JokeFlow(Workflow):\n",
-    "    llm = OpenAI()\n",
     "\n",
     "    @step\n",
-    "    async def generate_joke(self, ev: StartEvent) -> JokeEvent:\n",
-    "        topic = ev.topic\n",
+    "    async def summarize_sections(self, ctx: Context, ev: SummarizationEvent) -> SummarizationNumericalValidationEvent | StopEvent: #SummarizationValidationEvent:\n",
+    "        \n",
+    "        if len(ctx.data[\"bad_summaries\"])==0:\n",
+    "            return StopEvent(result=ctx.data[\"section_summaries\"])\n",
+    "        elif \"section_summaries\" in ctx.data:\n",
+    "            print(\"   Bad summaries found. Correcting...\")\n",
+    "            section_summaries = ctx.data[\"section_summaries\"]\n",
+    "            summary_count = ctx.data[\"bad_summaries\"]\n",
+    "            prompt_suffix = f\"\"\"\\nThe first attempt at summarizing this section had numerical copy mistakes. Copy numbers exactly as they appear in the text.\"\"\"\n",
+    "        else:\n",
+    "            section_summaries = [None]*ctx.data[\"num_sections\"]\n",
+    "            summary_count = range(ctx.data[\"num_sections\"])\n",
+    "            prompt_suffix = \"\"\n",
+    "        \n",
+    "        for i in summary_count:\n",
+    "            extracted_reg = ev.result[i]\n",
+    "            prompt_summary = f\"\"\"\n",
+    "            Summarize the content of the following section from a new SEC rule proposal or amendment. Ensure that the summary:\n",
     "\n",
-    "        prompt = f\"Write your best joke about {topic}.\"\n",
-    "        response = await self.llm.acomplete(prompt)\n",
-    "        return JokeEvent(joke=str(response))\n",
+    "            1. Includes every reference to any specific regulatory section, rule, or act mentioned in the text (e.g., 12 U.S.C. 1843(k)(4)(C), 240.13a-15, Unfunded Mandates Reform Act (section 202(a)), Investment Company Act of 1940).\n",
+    "            2. Stays strictly within the information presented in the text, without incorporating any outside or prior knowledge.\n",
+    "            3. Is detailed, thorough, and specific in its coverage of all key points, definitions and exclusions.\n",
+    "            4. Avoids adding any introductory or concluding remarks outside the scope of the summary itself.\n",
     "\n",
+    "            Here are some of the regulatory sections, rules, and acts:\n",
+    "            {extracted_reg} \n",
+    "            \"\"\"\n",
+    "            print(f\"   Summarizing section {i+1}/{ctx.data['num_sections']}...\")\n",
+    "            parser = SentenceSplitter(chunk_size=500, chunk_overlap=20)\n",
+    "            nodes = parser.get_nodes_from_documents(ctx.data[\"new_rule_documents\"], show_progress=True)\n",
+    "            response = await ctx.data[\"summarizer\"].get_response(prompt_summary+prompt_suffix, [doc.text for doc in nodes])\n",
+    "            section_summaries[i](response)\n",
+    "        \n",
+    "        ctx.data[\"section_summaries\"] = section_summaries\n",
+    "        return SummarizationNumericalValidationEvent(result=ev.result, summaries=section_summaries)\n",
+    "    \n",
     "    @step\n",
-    "    async def critique_joke(self, ev: JokeEvent) -> StopEvent:\n",
-    "        joke = ev.joke\n",
+    "    async def validate_summaries(self, ctx: Context, ev: SummarizationNumericalValidationEvent) -> SummarizationEvent:\n",
+    "        \n",
+    "        bad_summaries = []\n",
+    "        sections = [x.text for x in ctx.data[\"new_rule_documents\"]]\n",
+    "        for i in ctx.data[\"bad_summaries\"]:\n",
+    "            goods=0\n",
+    "            bads=0\n",
+    "            numbers = re.findall(r'(?<!\\w)(\\d{1,3}(?:,\\d{3})*(?:\\.\\d+)?|\\d+\\.\\d+|\\d+)(?!\\w)', ev.summaries[i])\n",
+    "            numbers = [x for x in numbers if len(x)>1]\n",
+    "            print(numbers)\n",
+    "            for number in numbers:\n",
+    "                if number not in sections[i]:\n",
+    "                    bads+=1\n",
+    "                    # print(f\"{number} not in section {i}!\")\n",
+    "                else:\n",
+    "                    goods+=1\n",
+    "            # TODO: this is a manual param. put in ctx.data\n",
+    "            if bads>7: bad_summaries.append(i)\n",
+    "            print(f\"   Section {i} Goods: {goods}, Bads: {bads}\")\n",
     "\n",
-    "        prompt = f\"Give a thorough analysis and critique of the following joke: {joke}\"\n",
-    "        response = await self.llm.acomplete(prompt)\n",
-    "        return StopEvent(result=str(response))\n",
-    "\n",
-    "\n",
-    "w = JokeFlow(timeout=60, verbose=False)\n",
-    "result = await w.run(topic=\"pirates\")\n",
-    "print(str(result))\n",
-    "\n",
-    "\n",
-    "    "
+    "        ctx.data[\"bad_summaries\"] = bad_summaries            \n",
+    "        return SummarizationEvent(result=ev.result)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rule_flows.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "draw_all_possible_flows(RuleSummarizationFlow,filename=\"rule_flows.html\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running step initialize\n",
+      "Step initialize produced event RegulationsExtractionEvent\n",
+      "Running step extract_regulations\n",
+      "Step extract_regulations produced event FormatCorrectionEvent\n",
+      "Running step correct_format\n",
+      "Step correct_format produced event SummarizationEvent\n",
+      "Running step summarize_sections\n",
+      "   Summarizing section 1/9...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7fc42518c03048218df81ec8fd6df68d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Parsing nodes:   0%|          | 0/9 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "c = RuleSummarizationFlow(timeout=12000, verbose=True)\n",
+    "result = await c.run()"
+   ]
   },
   {
    "cell_type": "code",
